ingress-https.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-elastic
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "eck.framsouza.co"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-elastic
spec:
  hosts:
  - "eck.framsouza.co"
  gateways:
  - istio-elastic
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5601
        host: elastic-istio-kb-http
  http:
  - match:
    - uri:
        prefix: /elastic
    route:
    - destination:
        port:
          number: 9300
        host: elastic-istio-two-es-http
